--- a/css/bievenida.css
+++ b/css/bievenida.css
@@ -46,3 +46,102 @@ h3{
     padding: 3px;
     cursor: pointer;
 }
+/* 1. Pantallas extra grandes (>=1200px) */
+@media (min-width: 1200px) {
+    img {
+        width: 600px;
+    }
+
+    h1 {
+        font-size: 120px;
+    }
+
+    h3 {
+        font-size: 36px;
+    }
+
+    #nombre_usuario {
+        width: 400px;
+        font-size: 28px;
+    }
+
+    #boton_enviar {
+        width: 250px;
+        font-size: 22px;
+    }
+}
+
+/* 2. Pantallas medianas (768px–1199px) */
+@media (min-width: 768px) and (max-width: 1199px) {
+    img {
+        width: 500px;
+    }
+
+    h1 {
+        font-size: 80px;
+    }
+
+    h3 {
+        font-size: 28px;
+    }
+
+    #nombre_usuario {
+        width: 350px;
+        font-size: 24px;
+    }
+
+    #boton_enviar {
+        width: 220px;
+        font-size: 18px;
+    }
+}
+
+/* 3. Pantallas pequeñas (576px–767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+    img {
+        width: 70%;
+    }
+
+    h1 {
+        font-size: 48px;
+    }
+
+    h3 {
+        font-size: 22px;
+    }
+
+    #nombre_usuario {
+        width: 280px;
+        font-size: 20px;
+    }
+
+    #boton_enviar {
+        width: 180px;
+        font-size: 16px;
+    }
+}
+
+/* 4. Pantallas extra pequeñas (<576px) */
+@media (max-width: 575px) {
+    img {
+        width: 90%;
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    #nombre_usuario {
+        width: 90%;
+        font-size: 18px;
+    }
+
+    #boton_enviar {
+        width: 80%;
+        font-size: 16px;
+    }
+}
