--- a/css/carrito.css
+++ b/css/carrito.css
@@ -12,9 +12,11 @@
 body {
     margin: 0;
     padding: 0;
+    padding-bottom: 10px;
     font-family: 'Segoe UI', sans-serif;
     background-color: var(--color-light);
     color: var(--color-dark);
+    height: 100vh;
 }
 
 .contenedor-carrito {
@@ -83,6 +85,40 @@ h1 {
 }
 .btn-finalizar-compra:hover {
     background-color: #000d4f;
+}
+/* -- Comportamiento con el modo oscuro activado -- */
+
+.dark-mode{
+    background-color: #333435;
+}
+
+.dark-mode .contenedor-carrito {
+    background-color: #2c3e50;
+}
+
+.dark-mode #tabla-carrito thead {
+    background-color: #5285b8;
+    color: rgb(20, 20, 20);
+}
+
+.dark-mode #boton-modo_oscuro{
+    color: white;
+    background-color: #2c3e50;
+    border: solid white 1px;
+}
+
+.dark-mode #boton-modo_oscuro:hover{
+    color: #5285b8;
+    background-color: white;
+    border: solid white 1px;
+}
+
+.dark-mode td{
+    color: white;
+}
+
+.dark-mode .total-carrito{
+    color: #5285b8;
 }
 
 /* ======================= */
